# master-thesis-pjatk

./: .gitignore  LICENSE  README.md
code/: .gitignore  docker-compose.yml  pyproject.toml
code/data/documents/extracted_documents/ipid/auto/: hestia_ergo7_komunikacja.md  pzu_pzu_auto.md  warta_autocasco_komfort_ack.md  warta_autocasco_standard_acs.md
code/data/documents/extracted_documents/ipid/mieszkanie/: hestia_ergo7_pozakomunikacyjne.md  pzu_pzu_dom.md  warta_warta_dom.md  warta_warta_dom_komfort.md
code/data/documents/extracted_documents/ipid/podroze/: hestia_ergo7_podroz.md  pzu_pzu_wojazer.md  (+1 more)
code/data/evaluation/questions/: questions_20251130.csv
code/data/evaluation/results/: overall_answer_metrics_20260313_200511.csv  overall_document_relevance_20260313_200511.csv  overall_summary_20260313_200511.csv  runner_summary_20260313_200511.csv
code/notebooks/: NB_00_visualize_agents.ipynb  NB_01_build_vectorstore.ipynb  NB_02_run_agents.ipynb  NB_03_evaluate_agents.ipynb  NB_04_visualize_results.ipynb
code/sources/: __init__.py  chuncker.py  drawer.py  evaluator.py  extractor.py  observer.py  runner.py  tracker.py  vectorstore.py
code/sources/agents/: __init__.py  blackboard.py  deterministic.py  factory.py  hierarchical.py  planner_executor.py  react.py  router_specialist.py  state.py
code/sources/config/: __init__.py  app.py  graph.py  prompts.py  schemas.py
code/sources/tools/: __init__.py  answer_synthesizer.py  citation_maker.py  evidence_selector.py  prompt_selector.py  query_rewriter.py  question_parser.py  reranker.py  retriever.py
(+45 files in other folders)
